--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -15,38 +15,42 @@
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.CatPhotoApp))">Learn HTML by Building a Cat Photo App</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.CafeMenu))">Learn Basic CSS by Building a Cafe Menu</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.SetOfColoredMarkers))">Learn CSS Colors by Building a Set of Colored Markers</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.RegistrationForm))">Learn HTML Forms by Building a Registration Form</button>
-                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.SurveyForm)">Certification Project: Survey Form</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.CatPhotoApp))">Learn HTML by Building a Cat Photo App</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.CafeMenu))">Learn Basic CSS by Building a Cafe Menu</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.SetOfColoredMarkers))">Learn CSS Colors by Building a Set of Colored Markers</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.RegistrationForm))">Learn HTML Forms by Building a Registration Form</button>
+                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.SurveyForm))">
+                        <i class="bi bi-award me-1"></i> Certification Project: Survey Form
+                    </button>
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.RothkoPainting))">Learn the CSS Box Model by Building a Rothko Painting</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.PhotoGallery))">Learn CSS Flexbox by Building a Photo Gallery</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.NutritionLabel))">Learn Typography by Building a Nutrition Label</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.Quiz))">Learn Accessibility by Building a Quiz</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.RothkoPainting))">Learn the CSS Box Model by Building a Rothko Painting</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.PhotoGallery))">Learn CSS Flexbox by Building a Photo Gallery</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.NutritionLabel))">Learn Typography by Building a Nutrition Label</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.Quiz))">Learn Accessibility by Building a Quiz</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-tribute-page-template/" target="_blank">
-                        Certification Project: Tribute Page
+                        <i class="bi bi-award me-1"></i> Certification Project: Tribute Page
                     </a>
 
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.BalanceSheet))">Learn More About CSS Pseudo Selectors by Building A Balance Sheet</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.CatPainting))">Learn Intermediate CSS by Building a Cat Painting</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.Piano))">Learn Responsive Web Design by Building a Piano</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.BalanceSheet))">Learn More About CSS Pseudo Selectors by Building A Balance Sheet</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.CatPainting))">Learn Intermediate CSS by Building a Cat Painting</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.Piano))">Learn Responsive Web Design by Building a Piano</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-technical-documentation-page-template/" target="_blank">
-                        Certification Project: Technical Documentation Page
+                        <i class="bi bi-award me-1"></i> Certification Project: Technical Documentation Page
                     </a>
 
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.CitySkyline))">Learn CSS Variables by Building a City Skyline</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.Magazine))">Learn CSS Grid by Building a Magazine</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.CitySkyline))">Learn CSS Variables by Building a City Skyline</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.Magazine))">Learn CSS Grid by Building a Magazine</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-product-landing-page-template/" target="_blank">
-                        Certification Project: Product Landing Page
+                        <i class="bi bi-award me-1"></i> Certification Project: Product Landing Page
                     </a>
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.FerrisWheel))">Learn CSS Animation by Building a Ferris Wheel</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.Penguin))">Learn CSS Transforms by Building a Penguin</button>
-                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(20)">Certification Project: Personal Portfolio Webpage</button> *@
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.FerrisWheel))">Learn CSS Animation by Building a Ferris Wheel</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.ResponsiveWebDesign', @((int)Projects.Penguin))">Learn CSS Transforms by Building a Penguin</button>
+                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProject()">
+                        <i class="bi bi-award me-1"></i> Certification Project: Personal Portfolio Webpage
+                    </button>
                 </div>
             </div>
         </div>
@@ -59,16 +63,18 @@
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.PyramidGenerator))">Learn Introductory JavaScript by Building a Pyramid Generator</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.GradebookApp))">Review JavaScript Fundamentals by Building a Gradebook App</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RolePlayingGame))">Learn Basic JavaScript by Building a Role Playing Game</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RandomBackgroundColorChanger))">Learn Basic Debugging by Building a Random Background Color Changer</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.CalorieCounter))">Learn Form Validation by Building a Calorie Counter</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RockPaperScissorsGame))">Review DOM Manipulation by Building a Rock, Paper, Scissors Game</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.MusicPlayer))">Learn Basic String and Array Methods by Building a Music Player</button>
-                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.PalindromeChecker))">Certification Project: Build a Palindrome Checker</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.PyramidGenerator))">Learn Introductory JavaScript by Building a Pyramid Generator</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.GradebookApp))">Review JavaScript Fundamentals by Building a Gradebook App</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.RolePlayingGame))">Learn Basic JavaScript by Building a Role Playing Game</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.RandomBackgroundColorChanger))">Learn Basic Debugging by Building a Random Background Color Changer</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.CalorieCounter))">Learn Form Validation by Building a Calorie Counter</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.RockPaperScissorsGame))">Review DOM Manipulation by Building a Rock, Paper, Scissors Game</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.MusicPlayer))">Learn Basic String and Array Methods by Building a Music Player</button>
+                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.PalindromeChecker))">
+                        <i class="bi bi-award me-1"></i> Certification Project: Build a Palindrome Checker
+                    </button>
                     
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.DateFormatter))">Learn the Date Object by Building a Date Formatter</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.DateFormatter))">Learn the Date Object by Building a Date Formatter</button>
                 </div>
             </div>
         </div>
@@ -86,34 +92,25 @@
 }
 
 <script>
-    function OpenProjectResponsiveWebDesign(project) {
-        console.log(project);
-        $.ajax({
-            type: "GET",
-            url: '/ResponsiveWebDesign/OpenProject?projects=' + project,
-            success: function (data) {
-                let $modal = $("#projectModal");
-                $modal.find('.modal-content').html(data);
-                $modal.modal("show");
-            },
-            error: function (data) {
-                alert(data.responseJSON.mensagem);
-            }
-        });
-    }
+    function OpenProject(module, project) {
+        console.log(module);
+        if (!module || !project) {
+            toastr.warning("Módulo ou projeto inválido.");
+            return;
+        }
 
-    function OpenProjectJavaScriptAlgorithms(project) {
-        $.ajax({
-            type: "GET",
-            url: '/JavaScriptAlgorithmsDataStructures/OpenProject?projects=' + project,
-            success: function (data) {
+        const url = `/${module}/OpenProject?projects=${project}`;
+        console.log(url);
+
+        $.get(url)
+            .done(function (data) {
                 let $modal = $("#projectModal");
                 $modal.find('.modal-content').html(data);
                 $modal.modal("show");
-            },
-            error: function (data) {
-                alert(data.responseJSON.mensagem);
-            }
-        });
+            })
+            .fail(function (xhr) {
+                const msg = xhr.responseJSON?.mensagem || "Erro ao carregar o projeto.";
+                toastr.error(msg);
+            });
     }
 </script>
