--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RandomBackgroundColorChanger.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RandomBackgroundColorChanger.cshtml
@@ -4,6 +4,12 @@
 </div>
 
 <div class="modal-body custom-random-background-color-changer" id="random-background-color-changer">
+    <div class="alert alert-info small" role="alert">
+        This project works with the Math.floor() and Math.random() methods.
+        <button class="btn btn-sm btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#codeExample" aria-expanded="false" aria-controls="codeExample">
+            View Code
+        </button>
+    </div>
     <h1>Random Background Color changer</h1>
     <div>
         <section class="bg-information-container">
@@ -11,6 +17,44 @@
         </section>
 
         <button class="btn-project-random-color" id="btn">Change Background Color</button>
+    </div>
+    <div class="collapse mt-2" id="codeExample">
+        <div class="card card-body bg-light text-monospace">
+            <pre>
+                <codev>
+const darkColorsArr = [
+    "#2C3E50",
+    "#34495E",
+    "#2C2C2C",
+    "#616A6B",
+    "#4A235A",
+    "#2F4F4F",
+    "#0E4B5A",
+    "#36454F",
+    "#2C3E50",
+    "#800020",
+];
+
+function getRandomIndex() {
+    const randomIndex = Math.floor(darkColorsArr.length * Math.random());
+    return randomIndex;
+}
+
+const body = document.getElementById("random-background-color-changer");
+const bgHexCodeSpanElement = document.querySelector("#bg-hex-code");
+
+function changeBackgroundColor() {
+    const color = darkColorsArr[getRandomIndex()];
+
+    bgHexCodeSpanElement.innerText = color;
+    body.style.backgroundColor = color;
+}
+const btn = document.querySelector("#btn");
+
+btn.onclick = changeBackgroundColor;
+                </codev>
+            </pre>
+        </div>
     </div>
 </div>
 
@@ -27,9 +71,13 @@
         padding: 20px;
         box-sizing: border-box;
         background-color: var(--dark-purple);
-        color: var(--light-grey);
-        text-align: center;
     }
+
+        .custom-random-background-color-changer h1,
+        .custom-random-background-color-changer p {
+            color: var(--light-grey);
+            text-align: center;
+        }
 
     .bg-information-container {
         margin: 15px 0 25px;
@@ -46,6 +94,7 @@
         border-color: var(--golden-yellow);
         border-width: 3px;
     }
+
         .btn-project-random-color:hover {
             background-image: linear-gradient(#ffcc4c, #f89808);
         }
