--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/_Magazine.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/_Magazine.cshtml
@@ -1,16 +1,17 @@
-﻿<div class="modal-header">
+﻿<link rel="stylesheet" href="~/css/magazine.css" asp-append-version="true" />
+<div class="modal-header">
     <h5 class="modal-title" id="projectMagazine">Learn CSS Grid by Building a Magazine</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
 <div class="modal-body custom-magazine">
-    <div class="main-magazine">
+    <main>
         <section class="heading">
-            <header class="hero-magazine">
+            <header class="hero">
                 <img src="https://cdn.freecodecamp.org/platform/universal/fcc_meta_1920X1080-indigo.png"
                      alt="freecodecamp logo"
                      loading="lazy"
-                     class="hero-magazine-img" />
-                <h1 class="hero-magazine-title">OUR NEW CURRICULUM</h1>
+                     class="hero-img" />
+                <h1 class="hero-title">OUR NEW CURRICULUM</h1>
                 <p class="hero-subtitle">
                     Our efforts to restructure our curriculum with a more project-based
                     focus
@@ -41,7 +42,7 @@
                 </a>
             </div>
         </section>
-        <section class="text-magazine">
+        <section class="text">
             <p class="first-paragraph">
                 Soon the freeCodeCamp curriculum will be 100% project-driven learning. Instead of a series of coding challenges, you'll learn through building projects - step by step. Before we get into the details, let me emphasize: we are not changing the certifications. All 6 certifications will still have the same 5 required projects. We are only changing the optional coding challenges.
             </p>
@@ -70,7 +71,7 @@
                 Instead of a series of coding challenges, people will be in their code editor passing one test after another, quickly building up a project. People will get into a real flow state, similar to what they experience when they build the required projects at the end of each certification. They'll get that sense of forward progress right from the beginning. And freeCodeCamp will be a much smoother experience.
             </p>
         </section>
-        <section class="text-magazine text-with-images">
+        <section class="text text-with-images">
             <article class="brief-history">
                 <h3 class="list-title">A Brief History</h3>
                 <p>Of the Curriculum</p>
@@ -146,159 +147,5 @@
                      height="400" />
             </aside>
         </section>
-    </div>
+    </main>
 </div>
-
-<style>
-    .custom-magazine,
-    ::before,
-    ::after {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-
-    .custom-magazine {
-        font-size: 62.5%;
-        font-family: 'Baskervville', serif;
-        color: linen;
-        background-color: rgb(20, 30, 40);
-    }
-
-        .custom-magazine h1 {
-            font-family: 'Anton', sans-serif;
-        }
-
-        .custom-magazine h2, h3, h4, h5, h6 {
-            font-family: 'Raleway', sans-serif;
-        }
-
-        .custom-magazine a {
-            text-decoration: none;
-            color: linen;
-        }
-
-    .main-magazine {
-        display: grid;
-        grid-template-columns: minmax(2rem, 1fr) minmax(min-content, 94rem) minmax(2rem, 1fr);
-        row-gap: 3rem;
-    }
-
-    .custom-magazine img {
-        width: 100%;
-        object-fit: cover;
-    }
-
-    .custom-magazine hr {
-        margin: 1.5rem 0;
-        border: 1px solid rgba(120, 120, 120, 0.6);
-    }
-
-    .heading-magazine {
-        grid-column: 2 / 3;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        row-gap: 1.5rem;
-    }
-
-    .text-magazine {
-        grid-column: 2 / 3;
-        font-size: 1.8rem;
-        letter-spacing: 0.6px;
-        column-width: 25rem;
-        text-align: justify;
-    }
-
-    .hero-magazine {
-        grid-column: 1 / -1;
-        position: relative;
-    }
-
-    .hero-magazine-title {
-        text-align: center;
-        color: orangered;
-        font-size: 2rem;
-    }
-
-    .hero-subtitle {
-        font-size: 2.4rem;
-        color: orangered;
-        text-align: center;
-    }
-
-    .author {
-        font-size: 2rem;
-        font-family: "Raleway", sans-serif;
-    }
-
-    .author-name a:hover {
-        background-color: #306203;
-    }
-
-    .publish-date {
-        color: rgba(255, 255, 255, 0.5);
-    }
-
-    .social-icons {
-        display: grid;
-        font-size: 3rem;
-        grid-template-columns: repeat(5, 1fr);
-        grid-auto-flow: column;
-        grid-auto-columns: 1fr;
-        align-items: center;
-    }
-
-    .first-paragraph::first-letter {
-        font-size: 6rem;
-        color: orangered;
-        float: left;
-        margin-right: 1rem;
-    }
-
-    .quote {
-        color: #00beef;
-        font-size: 2.4rem;
-        text-align: center;
-        font-family: "Raleway", sans-serif;
-    }
-
-        .quote::before {
-            content: '" ';
-        }
-
-        .quote::after {
-            content: ' "';
-        }
-
-    .text-with-images {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        column-gap: 3rem;
-        margin-bottom: 3rem;
-    }
-
-    .lists {
-        list-style-type: none;
-        margin-top: 2rem;
-    }
-
-        .lists li {
-            margin-bottom: 1.5rem;
-        }
-
-    .list-title, .list-subtitle {
-        color: #00beef;
-    }
-
-    .image-wrapper {
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-template-rows: repeat(3, min-content);
-        gap: 2rem;
-        place-items: center;
-    }
-
-    .image-1, .image-3 {
-        grid-column: 1 / -1;
-    }
-</style>
