--- a/FreeCodeCampApp/Views/Shared/_Layout.cshtml
+++ b/FreeCodeCampApp/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="~/FreeCodeCampApp.styles.css" asp-append-version="true" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     </head>
     <body>
         <header id="home">
