--- a/FreeCodeCampApp/wwwroot/css/palindromeChecker.css
+++ b/FreeCodeCampApp/wwwroot/css/palindromeChecker.css
@@ -1,9 +1,12 @@
-﻿.custom-palindrome-checker {
+﻿.palindrome-checker-project {
+    background: linear-gradient(135deg, #3b82f6 0%, #c7d9f5 100%);
+}
+
+.custom-palindrome-checker {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #3b82f6 0%, #c7d9f5 100%);
     color: #333;
     min-height: 100vh;
     display: flex;
