Add _TodoApp page

--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -76,6 +76,7 @@
                     
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.DateFormatter))">Learn the Date Object by Building a Date Formatter</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.FootballTeamCards))">Learn Modern JavaScript Methods by Building Football Team Cards</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.TodoApp))">Learn localStorage by Building a Todo App</button>
                 </div>
             </div>
         </div>
